--- a/app/views/imports/new.html.erb
+++ b/app/views/imports/new.html.erb
@@ -49,9 +49,9 @@
           <li>
             <%= button_to imports_path(import: { type: "OfxImport" }), class: "flex items-center justify-between p-4 group cursor-pointer w-full", data: { turbo: false } do %>
               <div class="flex items-center gap-2">
-                <div class="bg-emerald-500/5 rounded-md w-8 h-8 flex items-center justify-center">
-                  <span class="text-emerald-500">
-                    <%= icon("file-text", color: "current") %>
+                <div class="bg-indigo-500/5 rounded-md w-8 h-8 flex items-center justify-center">
+                  <span class="text-indigo-500">
+                    <%= icon("file-spreadsheet", color: "current") %>
                   </span>
                 </div>
                 <span class="text-sm text-primary group-hover:text-secondary">
