Add Sophtron Provider

--- a/app/views/settings/bank_sync/_provider_link.html.erb
+++ b/app/views/settings/bank_sync/_provider_link.html.erb
@@ -6,7 +6,8 @@
   "Plaid" => "#4da568",
   "SimpleFin" => "#e99537",
   "Enable Banking" => "#6471eb",
-  "CoinStats" => "#FF9332" # https://coinstats.app/press-kit/
+  "CoinStats" => "#FF9332", # https://coinstats.app/press-kit/
+  "Sophtron" => "#1E90FF"
 } %>
 <% provider_color = provider_colors[provider_link[:name]] || "#6B7280" %>
 
