--- a/app/views/family_merchants/merge.html.erb
+++ b/app/views/family_merchants/merge.html.erb
@@ -1,16 +1,12 @@
 <%= render DS::Dialog.new do |dialog| %>
-  <% dialog.with_header(title: t(".title")) %>
+  <% dialog.with_header(title: t(".title"), subtitle: t(".description")) %>
   <% dialog.with_body do %>
     <%= styled_form_with url: perform_merge_family_merchants_path, method: :post, class: "space-y-4" do |f| %>
-      <p class="text-sm text-secondary"><%= t(".description") %></p>
-
-      <div class="space-y-2">
-        <%= f.label :target_id, t(".target_label"), class: "text-sm font-medium text-primary" %>
-        <%= f.select :target_id,
-              options_from_collection_for_select(@merchants, :id, :name),
-              { include_blank: t(".select_target") },
-              { class: "w-full", required: true } %>
-      </div>
+      <%= f.collection_select :target_id,
+            @merchants,
+            :id, :name,
+            { prompt: t(".select_target"), label: t(".target_label") },
+            { required: true } %>
 
       <div class="space-y-2">
         <p class="text-sm font-medium text-primary"><%= t(".sources_label") %></p>
@@ -28,9 +24,10 @@
         <p class="text-xs text-subdued"><%= t(".sources_hint") %></p>
       </div>
 
-      <section>
-        <%= f.submit t(".submit"), class: "btn btn-primary w-full" %>
-      </section>
+      <%= render DS::Button.new(
+        text: t(".submit"),
+        full_width: true
+      ) %>
     <% end %>
   <% end %>
 <% end %>
